draft project Need to rewrite and add PrimeNG, rework home page

--- a/web4Angular/src/app/components/registration/registration.component.html
+++ b/web4Angular/src/app/components/registration/registration.component.html
@@ -9,7 +9,7 @@
       <label for="passwordNew">Password:</label>
       <input type="password" id="passwordNew" name="password" required>
       <br/>
-      <button class="bigButtons" type="submit">Submit</button>
+      <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
     </form>
   </div>
 </div>
