--- a/web4Angular/src/app/components/login/login.component.html
+++ b/web4Angular/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
       <br/>
-      <button class="bigButtons" type="submit">Submit</button>
+      <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
     </form>
   </div>
 </div>
