--- a/web4Angular/src/app/components/main/main.component.css
+++ b/web4Angular/src/app/components/main/main.component.css
@@ -132,11 +132,6 @@ input#y{
   color: #fff;
 }
 
-/*.y-text{*/
-/*    margin-top: 28px;*/
-/*    margin-bottom: 25px;*/
-/*}*/
-
 .x-input select {
   width: 150px;
   height: 30px;
@@ -181,7 +176,15 @@ input#y{
   flex-grow: 1;
 }
 
-.tableMain {
+#table {
+  border-collapse: separate;
+  letter-spacing: 1px;
+  background-color: #1c1326;
+  color: #f5f3f7;
+  text-align: center;
+  border-radius: 16px;
+  border-spacing: 8px;
+  border: 2px solid #f5f3f7;
   width: 70%;
 }
 
