--- a/web4Angular/src/app/components/login/login.component.html
+++ b/web4Angular/src/app/components/login/login.component.html
@@ -4,12 +4,15 @@
     <h2>Login Form</h2>
     <form id="loginForm" >
       <label for="login">Login:</label>
-      <input type="text" id="login" name="login" required>
+      <input type="text" id="login" name="login" required [(ngModel)]="loginValue" (input)="checkInput()">
       <br/>
       <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required>
+      <input type="password" id="password" name="password" required [(ngModel)]="passwordValue" (input)="checkInput()">
       <br/>
       <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
+      <div id="error" *ngIf="isTextVisible">
+        <p>{{ errorMessage }}</p>
+      </div>
     </form>
   </div>
 </div>
