--- a/web4Angular/src/app/components/registration/registration.component.html
+++ b/web4Angular/src/app/components/registration/registration.component.html
@@ -4,12 +4,15 @@
     <h2>Register Form</h2>
     <form id="registerForm" >
       <label for="loginNew">Login:</label>
-      <input type="text" id="loginNew" name="login" required>
+      <input type="text" id="loginNew" name="login" required [(ngModel)]="loginValue" (input)="checkInput()">
       <br/>
       <label for="passwordNew">Password:</label>
-      <input type="password" id="passwordNew" name="password" required>
+      <input type="password" id="passwordNew" name="password" required [(ngModel)]="passwordValue" (input)="checkInput()">
       <br/>
       <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
+      <div id="error" *ngIf="isTextVisible">
+        <p>{{ errorMessage }}</p>
+      </div>
     </form>
   </div>
 </div>
