--- a/web4Angular/src/app/components/main/main.component.html
+++ b/web4Angular/src/app/components/main/main.component.html
@@ -51,27 +51,29 @@
         </div>
       </div>
     </div>
-    <form id="simpleForm" onsubmit="">
+    <form id="simpleForm" (ngSubmit)="onSubmit()" #myForm="ngForm">
       <div id="form">
         <div id="structForm">
           <br>
           <div class="x-input" id="x-input">
             <label>Choose X value:</label>
-            <p-autoComplete [(ngModel)]="selectedValueX" [dropdown]="true" [suggestions]="filteredValuesX" (completeMethod)="filterValX($event)" field="name" id="xAuto"></p-autoComplete>
+            <p-autoComplete [(ngModel)]="selectedValueX" [dropdown]="true" [suggestions]="filteredValuesX" (completeMethod)="filterValX($event)" (input)="checkInput()" id="xAuto" [ngModelOptions]="{standalone: true}"></p-autoComplete>
           </div>
           <br/>
           <div class="y-input" id="y-input">
             <label>Choose Y value:</label>
-<!--            <input name="y" pKeyFilter="num" placeholder="-5 to 3"  [ngModel]="selectedValueY" [ngModelOptions]="{standalone: true}" (ngModelChange)="selectedValueY = $event" style="font-size: 32px; width: 200px;" />-->
-            <input type="text" pInputText placeholder="-5 to 3" [(ngModel)]="selectedValueY" [ngModelOptions]="{standalone: true}" />
+            <input type="text" pInputText placeholder="-5 to 3" [(ngModel)]="selectedValueY" [ngModelOptions]="{standalone: true}" (input)="checkInput()"/>
           </div>
           <br/>
           <div class="r-input" id="r-input">
             <label>Choose R value:</label>
-            <p-autoComplete [(ngModel)]="selectedValueR" [dropdown]="true" [suggestions]="filteredValuesR" (completeMethod)="filterValR($event)" field="name" id="rAuto"></p-autoComplete>
+            <p-autoComplete [(ngModel)]="selectedValueR" [dropdown]="true" [suggestions]="filteredValuesR" (completeMethod)="filterValR($event)" id="rAuto" [ngModelOptions]="{standalone: true}" (input)="checkInput()"></p-autoComplete>
           </div>
         </div>
         <button type="submit" value="Confirm" class="bigButtons">Submit</button>
+        <div id="error" *ngIf="isTextVisible">
+          <p>{{ errorMessage }}</p>
+        </div>
       </div>
     </form>
 
