login + registration  send to server now

--- a/web4Angular/src/app/components/login/login.component.html
+++ b/web4Angular/src/app/components/login/login.component.html
@@ -2,14 +2,14 @@
 <div class="formBlock">
   <div class="formContainer">
     <h2>Login Form</h2>
-    <form id="loginForm" >
-      <label for="login">Login:</label>
-      <input type="text" id="login" name="login" required [(ngModel)]="loginValue" (input)="checkInput()">
+    <form id="loginForm">
+      <label for="loginNew">Login:</label>
+      <input type="text" id="loginNew" name="login" required [(ngModel)]="dataLogin.username" (input)="checkInput()">
       <br/>
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required [(ngModel)]="passwordValue" (input)="checkInput()">
+      <label for="passwordNew">Password:</label>
+      <input type="password" id="passwordNew" name="password" required [(ngModel)]="dataLogin.password" (input)="checkInput()">
       <br/>
-      <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
+      <button class="bigButtons" type="submit" (click)="tryLogin()">Submit</button>
       <div id="error" *ngIf="isTextVisible">
         <p>{{ errorMessage }}</p>
       </div>
