--- a/web4Angular/src/app/components/registration/registration.component.html
+++ b/web4Angular/src/app/components/registration/registration.component.html
@@ -2,14 +2,14 @@
 <div class="formBlock">
   <div class="formContainer">
     <h2>Register Form</h2>
-    <form id="registerForm" >
+    <form id="registerForm">
       <label for="loginNew">Login:</label>
-      <input type="text" id="loginNew" name="login" required [(ngModel)]="loginValue" (input)="checkInput()">
+      <input type="text" id="loginNew" name="login" required [(ngModel)]="dataRegister.username" (input)="checkInput()">
       <br/>
       <label for="passwordNew">Password:</label>
-      <input type="password" id="passwordNew" name="password" required [(ngModel)]="passwordValue" (input)="checkInput()">
+      <input type="password" id="passwordNew" name="password" required [(ngModel)]="dataRegister.password" (input)="checkInput()">
       <br/>
-      <button class="bigButtons" type="submit"  routerLink="/main">Submit</button>
+      <button class="bigButtons" type="submit" (click)="tryRegistration()">Submit</button>
       <div id="error" *ngIf="isTextVisible">
         <p>{{ errorMessage }}</p>
       </div>
