graph works, checker for graph also

--- a/web4Angular/src/app/components/main/main.component.html
+++ b/web4Angular/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
       <div id="coordinatePanelWrapper"
                      style="position: relative; margin-top: 10px; margin-left: 70px;">
         <div id="coordinatePanel" style="position: absolute; width: 400px; height: 400px;">
-          <svg width="400" height="400">
+          <svg #svgElement width="400" height="400">
             <line x1="0" y1="200" x2="400" y2="200" stroke="white" stroke-width="2"/>
             <line x1="200" y1="0" x2="200" y2="400" stroke="white" stroke-width="2"/>
             <
