- little logic rewrite - clear update - data and element blocks update - graph sends points to server
NEED:
upload all points from server

--- a/web4Angular/src/app/components/main/main.component.html
+++ b/web4Angular/src/app/components/main/main.component.html
@@ -81,8 +81,7 @@
 </div>
 <br>
 <div id="resultTable">
-  <button class="bigButtons" routerLink="/">StartPage</button>
-  <button class="bigButtons">Logout</button>
+  <button class="bigButtons" (click)="logOut()">Logout</button>
   <button class="bigButtons" (click)="clearModel()">Clear</button>
   <table id="table">
     <thead>
