css(screen resolution + colors) little logic fixes in code

--- a/web4Angular/src/app/components/header/header.component.html
+++ b/web4Angular/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div>
     <h2>Lab №4</h2>
     <br/>
-    Ovchinnikov Ilya | Alexandr Babushkin, P3221
+    Ovchinnikov|Babushkin, P3221
     <br/>
     Var №2166
   </div>
