--- a/web4Angular/src/app/components/main/main.component.css
+++ b/web4Angular/src/app/components/main/main.component.css
@@ -9,40 +9,40 @@ h2:first-letter{
 
 .workZone {
   width: 100%;
-  display: grid;
-  grid-template-rows: 520px 1fr;
-  background-color: #08050a;
+  /*display: grid;*/
+  /*grid-template-rows: 520px 1fr;*/
+  /*background-color: #08050a;*/
 }
 
 .container {
-  display: grid;
-  grid-template-columns: 30% 65%;
-  grid-gap: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
-.container > .XYcoord {
-  height: 400px;
-  width: 400px;
+.item {
+  flex: 1 0 calc(50% - 30px);
+  margin: 5px;
   text-align: center;
-  border: 0px solid #1c1326;
-  padding: 20px;
-  margin-top: 60px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-.XYcoord {
-  position: relative;
-  display: inline-block;
+@media screen and (max-width: 1256px) {
+  .item {
+    flex: 1 0 calc(100%);
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
-#pic {
-  display: block;
-}
-
-img {
-  position: absolute;
-  max-width: 100%;
-  max-height: 100%;
-  border: 5px solid #e42575;
+@media screen and (max-width: 874px) {
+  .item {
+    flex: 1 0 calc(100%);
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 #form {
@@ -50,24 +50,43 @@ img {
   text-align: center;
   border: 5px solid #1c1326;
   padding: 20px;
-  margin-top: 60px;
+  margin-top: 40px;
   color: #f5f3f7;
   font-size: 22px;
   font-family: cursive;
 }
 
+@media screen and (max-width: 1256px) {
+  #form {
+    height: 410px;
+    text-align: center;
+    border: 4px solid #1c1326;
+    padding: 16px;
+    margin-top: 30px;
+    color: #f5f3f7;
+    font-size: 20px;
+    font-family: cursive;
+  }
+}
+
+@media screen and (max-width: 874px) {
+  #form {
+    height: 380px;
+    text-align: center;
+    border: 3px solid #1c1326;
+    padding: 12px;
+    margin-top: 20px;
+    color: #f5f3f7;
+    font-size: 18px;
+    font-family: cursive;
+  }
+}
+
+
 #structForm {
   text-align: center;
   align-items: center;
 }
-
-/*.x-input {*/
-/*    display: flex;*/
-/*    margin-top: 30px;*/
-/*    align-items: center;*/
-/*    gap: 3px;*/
-/*    justify-content: center;*/
-/*}*/
 
 input#y{
   width: 150px;
@@ -101,14 +120,6 @@ input#y{
   background-color: #f33484;
   color: #fff;
 }
-
-/*.r-input {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    gap: 3px;*/
-/*    margin-bottom: 35px;*/
-/*    justify-content: center;*/
-/*}*/
 
 .button2 {
   width: 60px;
@@ -164,6 +175,34 @@ input#y{
   max-height: 50px;
 }
 
+@media screen and (max-width: 1256px) {
+  .bigButtons{
+    padding: 10px 20px;
+    margin-top: 8px;
+    font-size: 18px;
+    cursor: pointer;
+    border: 0 solid #ccc;
+    background-color: #e42575;
+    border-radius: 8px;
+    max-width: 200px;
+    max-height: 50px;
+  }
+}
+@media screen and (max-width: 874px) {
+  .bigButtons {
+    padding: 5px 12px;
+    margin-top: 6px;
+    font-size: 14px;
+    cursor: pointer;
+    border: 0 solid #ccc;
+    background-color: #e42575;
+    border-radius: 6px;
+    max-width: 200px;
+    max-height: 50px;
+  }
+}
+
+
 .bigButtons:hover{
   background-color: #a21b55;
 }
@@ -197,4 +236,19 @@ input#y{
 
 #error {
   color: red;
+  font-size: 28px;
+}
+
+@media screen and (max-width: 1256px) {
+  #error {
+    color: red;
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 874px) {
+  #error {
+    color: red;
+    font-size: 20px;
+  }
 }
